@@ -1,8 +1,9 @@
-Wed Jul 29 13:50:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+Wed Jul 29 15:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* src/Collection.m: Removed [-copy]
 	* src/include/Collecting.h: likewise
 	* src/NSAttributedString.m: fixed ([-copy]) and ([-isEqual:])
+	* src/NSCharacterSet.m: implemented (inefficiently) ([-isEqual:])
 
 Wed Jul 29  9:10:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
